--- a/index.html
+++ b/index.html
@@ -899,70 +899,36 @@
 	</main>
 	<div class="separacion">
 
-	</div>
-	<footer class="footer" id="Nosotros">
-		<div class="container container-footer">
-			<div class="menu-footer">
-				<div class="contact-info">
-					<p class="title-footer">Información de Contacto</p>
-					<ul>
-						<li>
-							Dirección: Avenida Quirino Chavez, sur 13, Apopa
-						</li>
-						<li>Teléfono: 7498 8516</li>
-						<li>Fax: 55555300</li>
-						<li>EmaiL: mrcoffeesv2024@gmail.com</li>
-					</ul>
+		<footer class="footer">
+			<div class="container-footer">
+				<div class="footer-section contact-info">
+					<h4>Información de Contacto</h4>
+					<p>Dirección: Avenida Quirino Chavez, sur 13, Apopa</p>
+					<p>Teléfono: 7498 8516</p>
+					<p>Fax: 55555300</p>
+					<p>Email: mrcoffeesv2024@gmail.com</p>
 					<div class="social-icons">
-						<span class="facebook">
-							<i class="fa-brands fa-facebook-f"></i>
-						</span>
-						<span class="instagram">
-							<i class="fa-brands fa-instagram"></i>
-						</span>
+						<a href="#"><i class="fa-brands fa-facebook"></i></a>
+						<a href="#"><i class="fa-brands fa-instagram"></i></a>
 					</div>
 				</div>
-
-				<div class="information">
-					<p class="title-footer">Integrantes</p>
-					<ul>
-						<li>Eduardo Martinez</li>
-						<li>Daniela Moran</li>
-						<li>Charlie Ramirez</li>
-					</ul>
-				</div>
-
-				<div class="my-account">
-					<p class="title-footer">Codigos</p>
-
-					<ul>
-						<li>1D27</li>
-						<li>1D31</li>
-						<li>1D34</li>
-					</ul>
-				</div>
-
-				<div class="newsletter">
-					<p class="title-footer">Boletín </p>
-
-					<div class="content">
-						<p>
-							Obten nuestro boletin para tener mas informacion de Mr. Coffee
-						</p>
-						<a href="img/Mr. Coffee.pdf" download="Mr. Coffee.pdf"><button>Descargar</button></a>
-					</div>
+				
+				<div class="footer-section newsletter">
+					<h4>Boletín</h4>
+					<p>Obtén nuestro boletín para más información de Mr. Coffee</p>
+					<a href="img/Mr. Coffee.pdf" download="Mr. Coffee.pdf" class="download-btn">DESCARGAR</a>
 				</div>
 			</div>
-
-			<div class="copyright">
-				<p>
-					Desarrollado por 1°D &copy; 2024
-				</p>
-
-				<img src="img/payment.png" alt="Pagos">
+		
+			<div class="footer-bottom">
+				<p>Desarrollado por 1° D © 2024</p>
+				<div class="payment-methods">
+					<img src="img/payment.png" alt="Métodos de Pago">
+				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
+		
+	
 	<script src="carrito.js"></script>
 
 	<script src="https://kit.fontawesome.com/81581fb069.js" crossorigin="anonymous"></script>
