--- a/index.html
+++ b/index.html
@@ -14,53 +14,42 @@
 
 <body>
 	<header>
-		<div class="container-hero">
-			<div class="container hero">
-				<div class="customer-support">
-					<i class="fa-solid fa-headset"></i>
-					<div class="content-customer-support">
-						<span class="text">Soporte al cliente</span>
-						<span class="number">+503 7875 5594</span>
-					</div>
-				</div>
+        <nav>
+            <a href="#" class="logo">Mr. Coffee</a>
+            
+            <!-- Menú hamburguesa -->
+            <div class="menu-icon" id="menu-icon" onclick="toggleMenu()">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
 
-				<div class="container-logo">
-					<i class="fa-solid fa-mug-hot"></i>
-					<h1 class="logo"><a href="/">mr. coffee</a></h1>
-				</div>
+            <ul class="nav-links" id="nav-links">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Menú</a></li>
+                <li><a href="#">Promociones</a></li>
+                <li><a href="#">Sobre Nosotros</a></li>
+                <li><a href="#">Contacto</a></li>
+                <li><a href="#">Reservas</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Ubicación</a></li>
+            </ul>
+
+            <!-- Carrito de compras -->
+            <div id="cart-container">
+                <img src="img/carrito-de-compras.ico" alt="Mostrar Carrito" id="toggle-cart" onclick="toggleCart()">
+                <div id="cart">
+                    <h2 class="carrito-h2">Carrito de Compras</h2>
+                    <div id="cart-items" class="cart-items"></div>
+                    <div class="total">Total: <span class="Cart-total" id="cart-total"> $0.00</span></div>
+                    <a href="formpago.html#" class="button">Comprar</a>
+                </div>
+            </div>
+        </nav>
+    </header>
 
 
-			</div>
-			<div class="container-navbar">
-				<nav class="navbar container">
-					<i class="fa-solid fa-bars"></i>
-					<ul class="menu">
-						<li><a href="#">Inicio</a></li>
-						<li><a href="#Especialidades De La Casa">Especialidades De La casa</a></li>
-						<li><a href="#Especialidades">Especialidades</a></li>
-						<li><a href="#Acompañamientos">Acompañamientos</a></li>
-						<li><a href="#Desayunos">Desayunos</a></li>
-						<li><a href="#Bebidas">Bebidas Frias</a></li>
-						<li><a href="#Nosotros">Nosotros</a></li>
-						<li><a href="index EN.html">Traducir al ingles</a></li>
-					</ul>
-
-					<div id="cart-container">
-						<img src="img/carrito-de-compras.ico" alt="Mostrar Carrito" id="toggle-cart"
-							onclick="toggleCart()">
-						<div id="cart">
-
-							<h2 class="carrito-h2">Carrito de Compras</h2>
-
-							<div id="cart-items" class="cart-items"></div>
-							<div class="total">Total: <span class="Cart-total" id="cart-total"> $0.00</span></div>
-							<a href="formpago.html#" class="button">Comprar</a>
-						</div>
-					</div>
-				</nav>
-			</div>
-	</header>
-
+    <script src="script.js"></script>
 	<section class="banner">
 		<div class="content-banner">
 			<p>Café Delicioso</p>
@@ -822,43 +811,40 @@
 			</div>
 
 		</section>
-	</main>
-	<div class="separacion">
-
-		<footer class="footer">
-			<div class="container-footer">
-				<div class="footer-section contact-info">
-					<h4>Información de Contacto</h4>
-					<p>Dirección: Avenida Quirino Chavez, sur 13, Apopa</p>
-					<p>Teléfono: 7498 8516</p>
-					<p>Fax: 55555300</p>
-					<p>Email: mrcoffeesv2024@gmail.com</p>
-					<div class="social-icons">
-						<a href="#"><i class="fa-brands fa-facebook"></i></a>
-						<a href="#"><i class="fa-brands fa-instagram"></i></a>
-					</div>
+		<footer>
+			<div class="footer-container">
+				<div class="footer-about">
+					<h3 id="Nosotros">Sobre Nosotros</h3>
+					<p>En <strong>Mr. Coffee</strong>, te ofrecemos el , acompañado de un ambiente relajante para
+						disfrutar de tus mejores momentos.</p>
+					<a href="img/Mr. Coffee.pdf" download="Mr. Coffee.pdf" class="btn-download">Descargar</a>
 				</div>
-				
-				<div class="footer-section newsletter">
-					<h4>Boletín</h4>
-					<p>Obtén nuestro boletín para más información de Mr. Coffee</p>
-					<a href="img/Mr. Coffee.pdf" download="Mr. Coffee.pdf" class="download-btn">DESCARGAR</a>
+				<div class="footer-links">
+					<h3>Contacto</h3>
+					<ul>
+						<li><strong>Dirección:</strong> Av. Quirino Chavez sur #13 Apopa San Salvador.</li>
+						<li><strong>Teléfono:</strong> +503 7875 5594</li>
+						<li><strong>Email:</strong> mrcoffeesv2024@gmail.com</li>
+					</ul>
+				</div>
+				<div class="footer-hours">
+					<h3>Horarios de Atención</h3>
+					<ul>
+						<li><strong>Lunes a Viernes:</strong> 8:00 AM - 8:00 PM</li>
+						<li><strong>Sábado:</strong> 9:00 AM - 6:00 PM</li>
+						<li><strong>Domingo:</strong> 10:00 AM - 4:00 PM</li>
+					</ul>
 				</div>
 			</div>
-		
 			<div class="footer-bottom">
-				<p>Desarrollado por 1° D © 2024</p>
-				<div class="payment-methods">
-					<img src="img/payment.png" alt="Métodos de Pago">
-				</div>
+				<p> Desarrollado Por 1D 2024 &copy;</p>
 			</div>
 		</footer>
-		
-	
-	<script src="carrito.js"></script>
 
-	<script src="https://kit.fontawesome.com/81581fb069.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="script.js">
+		<script src="carrito.js"></script>
+
+		<script src="https://kit.fontawesome.com/81581fb069.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="script.js">
 
 
 
