--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
             <ul class="nav-links" id="nav-links">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Menú</a></li>
-                <li><a href="#">Promociones</a></li>
-                <li><a href="#">Sobre Nosotros</a></li>
-                <li><a href="#">Contacto</a></li>
-                <li><a href="#">Reservas</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Ubicación</a></li>
+                <li><a href="#Especialidades De La Casa">Especialidades de la casa</a></li>
+                <li><a href="#Especialidades">Especialidades</a></li>
+                <li><a href="#Acompañamientos">Acompañamientos</a></li>
+                <li><a href="#Desayunos">Desayunos</a></li>
+                <li><a href="#Bebidas">Bebidas Frias</a></li>
+                <li><a href="#Nosotros">Nosotros</a></li>
+                
             </ul>
 
             <!-- Carrito de compras -->
@@ -62,7 +62,7 @@
 			<div class="card-feature">
 				<i class="fa-solid fa-plane-up"></i>
 				<div class="feature-content">
-					<span>promociones de envio </span>
+					<span>Promociones de envio </span>
 					<p>En pedido superior a $10</p>
 				</div>
 			</div>
@@ -71,13 +71,6 @@
 				<div class="feature-content">
 					<span>Contrareembolso</span>
 					<p>100% garantía de devolución de dinero</p>
-				</div>
-			</div>
-			<div class="card-feature">
-				<i class="fa-solid fa-gift"></i>
-				<div class="feature-content">
-					<span>Tarjeta regalo especial</span>
-					<p>Ofrece bonos especiales con regalo</p>
 				</div>
 			</div>
 		</section>
