--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
 							<i class="fa-solid fa-star"></i>
-							<i class="fa-solid fa-star"></i>
+							<i class="fa-solid fa-star"></i>  
 						</div>
 						<h3>Quesadilla</h3>
 						<button class="btn-add-cart" onclick="addToCart()">Comprar</button>
@@ -795,7 +795,6 @@
 					</div>
 				</div>
 			</div>
-
 		</section>
 		<footer>
 			<div class="footer-container">
@@ -826,7 +825,9 @@
 				<p> Desarrollado Por 1D 2024 &copy;</p>
 			</div>
 		</footer>
-
+		<button id="scrollToTopBtn" onclick="scrollToTop()">
+			<img src="img/right-arrow.png" alt="Ir Arriba">
+		</button>
 		<script src="carrito.js"></script>
 
 		<script src="https://kit.fontawesome.com/81581fb069.js" crossorigin="anonymous"></script>
