--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@
 			</div>
 		</footer>
 		<button id="scrollToTopBtn" onclick="scrollToTop()">
-			<img src="https://cdn-icons-png.flaticon.com/512/271/271220.png" alt="Ir Arriba">
+			<img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-arrow-up-c-256.png" alt="Ir Arriba">
 		</button>
 		<script src="carrito.js"></script>
 
